JDrucker/src/main/java/antlr4/XSQLParser.java
// Generated from /Users/braisdom/Workspace/JDrucker/JDrucker/src/main/java/XSQL.g4 by ANTLR 4.7.2
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, SQL=13, SQL_BEGINNING_KEYWORDS=14, ID=15, 
		WS=16, COMMENT=17, LINE_COMMENT=18, DIALECT=19, INT=20, FLOAT=21;
	public static final int
		RULE_xsqlDecl = 0, RULE_dialectDecl = 1, RULE_initDecl = 2, RULE_migrationsDecl = 3, 
		RULE_sqlDecl = 4, RULE_migrationsVersionDecl = 5, RULE_dialectOption = 6, 
		RULE_sqlBlock = 7, RULE_tableName = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"xsqlDecl", "dialectDecl", "initDecl", "migrationsDecl", "sqlDecl", "migrationsVersionDecl", 
			"dialectOption", "sqlBlock", "tableName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'initialize'", "'migrations'", "'{'", "'}'", "'sql'", "'version'", 
			"'mysql'", "'oracle'", "'sqlite'", "'postgresql'", "'mssql'", null, null, 
			null, null, null, null, "'dialect:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SQL", "SQL_BEGINNING_KEYWORDS", "ID", "WS", "COMMENT", "LINE_COMMENT", 
			"DIALECT", "INT", "FLOAT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class XsqlDeclContext extends ParserRuleContext {
		public DialectDeclContext dialectDecl() {
			return getRuleContext(DialectDeclContext.class,0);
		}
		public InitDeclContext initDecl() {
			return getRuleContext(InitDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(XSQLParser.EOF, 0); }
		public MigrationsDeclContext migrationsDecl() {
			return getRuleContext(MigrationsDeclContext.class,0);
		}
		public List<SqlDeclContext> sqlDecl() {
			return getRuleContexts(SqlDeclContext.class);
		}
		public SqlDeclContext sqlDecl(int i) {
			return getRuleContext(SqlDeclContext.class,i);
		}
		public XsqlDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xsqlDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterXsqlDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitXsqlDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitXsqlDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XsqlDeclContext xsqlDecl() throws RecognitionException {
		XsqlDeclContext _localctx = new XsqlDeclContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xsqlDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			dialectDecl();
			setState(19);
			initDecl();
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(20);
				migrationsDecl();
				}
			}

			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				{
				setState(23);
				sqlDecl();
				}
				}
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(29);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DialectDeclContext extends ParserRuleContext {
		public TerminalNode DIALECT() { return getToken(XSQLParser.DIALECT, 0); }
		public DialectOptionContext dialectOption() {
			return getRuleContext(DialectOptionContext.class,0);
		}
		public DialectDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialectDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterDialectDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitDialectDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitDialectDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DialectDeclContext dialectDecl() throws RecognitionException {
		DialectDeclContext _localctx = new DialectDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dialectDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(DIALECT);
			setState(32);
			dialectOption();
			setState(33);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitDeclContext extends ParserRuleContext {
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public SqlBlockContext sqlBlock() {
			return getRuleContext(SqlBlockContext.class,0);
		}
		public InitDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterInitDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitInitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitInitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitDeclContext initDecl() throws RecognitionException {
		InitDeclContext _localctx = new InitDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_initDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(T__1);
			setState(36);
			tableName();
			setState(37);
			sqlBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MigrationsDeclContext extends ParserRuleContext {
		public List<MigrationsVersionDeclContext> migrationsVersionDecl() {
			return getRuleContexts(MigrationsVersionDeclContext.class);
		}
		public MigrationsVersionDeclContext migrationsVersionDecl(int i) {
			return getRuleContext(MigrationsVersionDeclContext.class,i);
		}
		public MigrationsDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_migrationsDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterMigrationsDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitMigrationsDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitMigrationsDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MigrationsDeclContext migrationsDecl() throws RecognitionException {
		MigrationsDeclContext _localctx = new MigrationsDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_migrationsDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__2);
			setState(40);
			match(T__3);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(41);
				migrationsVersionDecl();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlDeclContext extends ParserRuleContext {
		public SqlBlockContext sqlBlock() {
			return getRuleContext(SqlBlockContext.class,0);
		}
		public DialectOptionContext dialectOption() {
			return getRuleContext(DialectOptionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(XSQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(XSQLParser.ID, i);
		}
		public SqlDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterSqlDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitSqlDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitSqlDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlDeclContext sqlDecl() throws RecognitionException {
		SqlDeclContext _localctx = new SqlDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sqlDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				setState(49);
				dialectOption();
				}
			}

			setState(52);
			match(T__5);
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(53);
				match(ID);
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(58);
			sqlBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MigrationsVersionDeclContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(XSQLParser.FLOAT, 0); }
		public SqlBlockContext sqlBlock() {
			return getRuleContext(SqlBlockContext.class,0);
		}
		public MigrationsVersionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_migrationsVersionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterMigrationsVersionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitMigrationsVersionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitMigrationsVersionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MigrationsVersionDeclContext migrationsVersionDecl() throws RecognitionException {
		MigrationsVersionDeclContext _localctx = new MigrationsVersionDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_migrationsVersionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__6);
			setState(61);
			match(FLOAT);
			setState(62);
			sqlBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DialectOptionContext extends ParserRuleContext {
		public DialectOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialectOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterDialectOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitDialectOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitDialectOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DialectOptionContext dialectOption() throws RecognitionException {
		DialectOptionContext _localctx = new DialectOptionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dialectOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlBlockContext extends ParserRuleContext {
		public List<TerminalNode> SQL() { return getTokens(XSQLParser.SQL); }
		public TerminalNode SQL(int i) {
			return getToken(XSQLParser.SQL, i);
		}
		public SqlBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterSqlBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitSqlBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitSqlBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlBlockContext sqlBlock() throws RecognitionException {
		SqlBlockContext _localctx = new SqlBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sqlBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__3);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SQL) {
				{
				{
				setState(67);
				match(SQL);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableNameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(XSQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(XSQLParser.ID, i);
		}
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).enterTableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSQLListener ) ((XSQLListener)listener).exitTableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSQLVisitor ) return ((XSQLVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tableName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				match(ID);
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}